--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
     "ejs": "^3.1.9",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonpath": "^1.1.1",
+    "jsonpath-plus": "^8.1.0",
+    "xpath": "^0.0.34"
   }
 }
