--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.19.2",
     "jsonpath": "^1.1.1",
     "jsonpath-plus": "^8.1.0",
+    "live-server": "^1.2.2",
+    "nodemon": "^3.1.1",
     "xpath": "^0.0.34"
   }
 }
