--- a/web-server/package.json
+++ b/web-server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "browser-sync": "^3.0.2",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "nodemon": "^3.1.1"
