--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@xmldom/xmldom": "^0.8.10",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "fhir.js": "^0.0.22",
+    "fhirclient": "^2.5.3",
     "jsonpath": "^1.1.1",
     "jsonpath-plus": "^8.1.0",
     "live-server": "^1.2.2",
