--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
+    "axios": "^1.7.2",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "fhir.js": "^0.0.22",
