--- a/web-server/package.json
+++ b/web-server/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.2",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "nodemon": "^3.1.1"
+    "nodemon": "^3.1.2"
   }
 }
