--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "fhir.js": "^0.0.22",
     "fhirclient": "^2.5.3",
     "jsonpath": "^1.1.1",
     "jsonpath-plus": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "live-server": "^1.2.2",
     "nodemon": "^3.1.1",
     "xpath": "^0.0.34"
