--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "fhir.js": "^0.0.22",
