--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jsonpath-plus": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "live-server": "^1.2.2",
-    "nodemon": "^3.1.1",
     "xpath": "^0.0.34"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
