--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "ejsOnFHIR is a blah blah.",
   "type": "module",
-  "main": "index.js",
+  "main": "webserver.js",
   "directories": {
     "test": "tests"
   },
