--- a/web-server/.env
+++ b/web-server/.env
@@ -1,4 +1,5 @@
 PORT=3000
 JWT_SECRET=your-secret-key
-USE_HTTPS=true
+USE_HTTPS=false
 CERT_PATH=./cert/mySelfSignedCert.pfx
+FHIR_BASE_URL=http://localhost:8080/fhir
