--- a/web-server/package.json
+++ b/web-server/package.json
@@ -17,6 +17,7 @@
     "browser-sync": "^3.0.2",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.2"
   }
 }
