--- a/web-server/.env
+++ b/web-server/.env
@@ -1,5 +1,13 @@
+# This app web server and port
+# 0.0.0.0 means listen on any local interfaces
+# maybe useful to set if deployed to cloud host
+HOST_IP=127.0.0.1
 PORT=3000
+
+
 JWT_SECRET=your-secret-key
 USE_HTTPS=false
 CERT_PATH=./cert/mySelfSignedCert.pfx
+
+# FHIR Server base url
 FHIR_BASE_URL=http://localhost:8080/fhir
