--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "web-server",
   "version": "1.0.0",
+  "description": "",
   "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "nodemon -L webserver.js",
-    "debug-windows": "nodemon -L app.js"
+    "debug": "./node_modules/.bin/nodemon -L webserver.js",
+    "debug-windows": ".\\node_modules\\.bin\\nodemon -L app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.2",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.2"
-  },
-  "description": ""
+  }
 }
